--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,10 +23,11 @@ jobs:
         with:
           go-version: '1.25'
 
-      - name: Set image tag
+      - name: Prepare build variables
         id: env
         run: |
           echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+          echo "GH_USER=${GITHUB_ACTOR,,}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -50,7 +51,7 @@ jobs:
         run: |
           make release \
             VERSION=${{ env.VERSION }} \
-            GH_USER=${{ github.actor }} \
+            GH_USER=${{ env.GH_USER }} \
             DOCKER_USER=${{ secrets.DOCKER_USERNAME }}
 
       - name: Extract changelog
