--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -2,4 +2,5 @@ ARG DZMAP_IMAGE=ghcr.io/woozymasta/dzmap
 ARG DZMAP_TAG=slim
 
 FROM $DZMAP_IMAGE:$DZMAP_TAG
+ENV ZOOM_LIMIT=6
 RUN ["/bin/loader", "--log-level=trace"]
