ci: move RN awk inside Makefile

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Extract changelog
         id: changelog
-        run: awk -f ./release_notes.awk ./CHANGELOG.md > release.md
+        run: make release-notes > release.md
 
       - name: Create GitHub release
         uses: ncipollo/release-action@v1
